--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MaYiSuYun</string>
+    <string name="app_name">手机百度</string>
     <string name="splash_sp">闪屏</string>
     <string name="Mai_zy">主页</string>
     <string name="Setting_sz">设置</string>
